fix seed, change brand name

--- a/sites/partners/styles/overrides.scss
+++ b/sites/partners/styles/overrides.scss
@@ -1,7 +1,7 @@
 :root {
-  --seeds-color-primary-darker: #00616a;
-  --seeds-color-primary-dark: #0077be;
-  --seeds-color-primary: #1877bd;
+  --seeds-color-primary-darker: #323738;
+  --seeds-color-primary-dark: #054a51;
+  --seeds-color-primary: #00616a;
   --seeds-color-primary-light: #49c7eb;
   --seeds-color-primary-lighter: #f4f4f4;
   --seeds-bg-color-surface-primary: var(--seeds-color-primary-lighter);
