--- a/sites/public/src/components/page/HeroDeprecated.module.scss
+++ b/sites/public/src/components/page/HeroDeprecated.module.scss
@@ -21,9 +21,13 @@
   --title-mobile-font-size: var(--seeds-font-size-3xl);
   --title-text-color: inherit;
 
-  background-color: var(--background-color);
+   background-image: url("https://images.unsplash.com/photo-1628231598450-72675fcb86d9?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
+    background-position: 0 30%;
+   
   background-size: cover;
-  color: var(--text-color);
+  color: rgb(36, 36, 36);
+  text-shadow: 0px 1px 1px rgb(194, 226, 245);
   margin: var(--margin-desktop);
   padding: var(--seeds-s20) var(--seeds-s5);
 
